--- a/README
+++ b/README
@@ -7,6 +7,9 @@ SYNOPSIS
       # create a new image
       my $image = Image::Imlib2->new(200, 200);
 
+      # or load an image
+      $image = Image::Imlib2->load("foo.png");
+
       # Enable the alpha channel support
       $image->has_alpha(1);
 
@@ -221,6 +224,18 @@ METHODS (Image::Imlib2)
       $image->draw_text(50, 50, "Groovy, baby, yeah!");
       $image->draw_text(50, 50, "Sweet, baby, yeah!",
                         TEXT_TO_UP, 1.571);
+
+  autocrop
+    This creates a duplicate of the image which is automatically cropped to
+    remove the background colour from the outside of the image:
+
+      my $cropped_image = $image->autocrop;
+
+  autocrop_dimensions
+    This returns the x, y, width and height rectangle in an image which
+    would hold the results of the autocrop method:
+
+      my($x, $y, $w, $h) = $image->autocrop_dimensions;
 
   crop (x, y, w, h)
     This creates a duplicate of a x, y, width, height rectangle in the
