Import of LBROCARD/Image-Imlib2-1.12 from CPAN.
gitpan-cpan-distribution: Image-Imlib2
gitpan-cpan-version:      1.12
gitpan-cpan-path:         LBROCARD/Image-Imlib2-1.12.tar.gz
gitpan-cpan-author:       LBROCARD
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 Revision history for Perl extension Image::Imlib2.
 
+1.12 Tue Aug 15 10:14:55 BST 2006
+    - added find_colour method
+    - added fill method
+
 1.11 Thu Aug  3 10:53:33 BST 2006
     - endianness fixes for new_using_data (thanks to Chris Dolan)
     - added autocrop method
