--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 Revision history for Perl extension Image::Imlib2.
 
+1.13 Fri Oct 13 19:08:41 BST 2006
+    - optimise autocropping (thanks to Sergey Mende)
+    - find_colour now returns undef if it doesn't find the colour
+
 1.12 Tue Aug 15 10:14:55 BST 2006
     - added find_colour method
     - added fill method
