--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 Revision history for Perl extension Image::Imlib2.
 
+2.00 Fri Dec  7 11:29:47 GMT 2007
+    - make the cache size 0 by default
+
 1.13 Fri Oct 13 19:08:41 BST 2006
     - optimise autocropping (thanks to Sergey Mende)
     - find_colour now returns undef if it doesn't find the colour
