Import of LBROCARD/Image-Imlib2-2.01 from CPAN.
gitpan-cpan-distribution: Image-Imlib2
gitpan-cpan-version:      2.01
gitpan-cpan-path:         LBROCARD/Image-Imlib2-2.01.tar.gz
gitpan-cpan-author:       LBROCARD
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 Revision history for Perl extension Image::Imlib2.
 
+2.01 Sun Jun  8 10:05:46 BST 2008
+    - in Build.PL, exit 0 when we can't find libimlib2
+
 2.00 Fri Dec  7 11:29:47 GMT 2007
     - make the cache size 0 by default
 
