--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,10 @@
 Revision history for Perl extension Image::Imlib2.
 
+2.03 Tue Nov 24 21:40:49 GMT 2009
+    - add a new_transparent method
+    - add a create_rotated_image method
+    - add a human-readable license
+
 2.02 Mon Dec  1 11:55:06 GMT 2008
     - update documentation to clarify cache_size
     - note that new images have undefined content (thanks to barbie)
